@@ -4,6 +4,8 @@ iFeature Changelog
 
 Version 3.1.2 (01-06-12)
 -Fixed social icon bug.
+-Fixed menu bug.
+-Fixed default color scheme bug.
 
 Version 3.1.1 (01-05-12)
 -IE 8 fix.
